# ChinaXivXiv

./: .gitignore  pyproject.toml
ChinaXivXiv/: defines.py  exceptions.py  main.py  mongo_ops.py  util.py
ChinaXivXiv/workers/: IA_uploader.py  file_downloader.py  fileid_finder.py  metadata_scraper.py  oai_worker.py  status_mover.py  task_provider.py
